--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
+//    compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
+//    compile 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
+//    compile 'com.google.android.exoplayer:exoplayer-hls:r2.4.0'
+//    compile 'com.google.android.exoplayer:exoplayer-smoothstreaming:r2.4.0'
+//    compile 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
